# src/routes/lesson.js
@@ -1,6 +1,7 @@
 const router = require('express').Router()
 
 const ResourcesCategory = require('~/models/resourcesCategory')
+const Lesson = require('~/models/lesson')
 const lessonController = require('~/controllers/lesson')
 const asyncWrapper = require('~/middlewares/asyncWrapper')
 const isEntityValid = require('~/middlewares/entityValidation')
@@ -12,6 +13,7 @@ const {
 } = require('~/consts/auth')
 
 const body = [{ model: ResourcesCategory, idName: 'category' }]
+const params = [{ model: Lesson, idName: 'id' }]
 
 router.use(authMiddleware)
 router.use(restrictTo(TUTOR, ADMIN, SUPERADMIN))
@@ -19,6 +21,7 @@ router.use(restrictTo(TUTOR, ADMIN, SUPERADMIN))
 router.param('id', idValidation)
 
 router.get('/', asyncWrapper(lessonController.getLessons))
+router.get('/:id', isEntityValid({ params }), asyncWrapper(lessonController.getLessonById))
 router.post('/', isEntityValid({ body }), asyncWrapper(lessonController.createLesson))
 router.patch('/:id', isEntityValid({ body }), asyncWrapper(lessonController.updateLesson))
 router.delete('/:id', asyncWrapper(lessonController.deleteLesson))
